# claude-code-marimo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: meta-agent.md
.claude/commands/docs/: claude-code.md
.claude/commands/kiro/: spec-execute.md
.claude/commands/utils/: agent-team.md  list-tools.md
.claude/hooks/scripts/: enforce-uv.sh  uv-ruff-mypy.sh
notebooks/: pandas_demo.py  titanic_analysis.py
