[project]
name = "claude-code-marimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.7",
    "duckdb>=1.3.2",
    "marimo[sql]>=0.14.16",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.32.0",
    "pydantic>=2.11.7",
    "seaborn>=0.13.2",
]
